[metadata]
name = umdpfmt
author = Scott Wales
author-email = scott.wales@unimelb.edu.au
summary = UMDP3 Formatter
description-file = README.rst
licence = Apache 2.0
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5

[global]
commands = 
    umdpfmt._setup_hooks.AntlrGen

[build_ext]
pre-hook.build_pre_hook = umdpfmt._setup_hooks.antlr_gen

[files]
packages = 
    umdpfmt

[pbr]
autodoc_tree_index_modules = True

[extras]
# Optional dependencies
dev = 
    pytest
    sphinx
    recommonmark

[build_sphinx]
source-dir = docs
build-dir = docs/_build

[tools.pytest]
addopts = --doctest-modules --doctest-glob='*.rst' --ignore setup.py --ignore conftest.py --ignore doc/conf.py
